--- a/views/editEmployee.ejs
+++ b/views/editEmployee.ejs
@@ -17,12 +17,9 @@
                             </div>
                         </div>
                     <div class="employee-container box-shadow components">
-                        <div class="head">
-                            <div class="title">
-                                Add employee
-                            </div>
+                        <div class="title">
+                            Update employee
                         </div>
-                        
                         <div class="addemp-form">
                             <form class="add-emp">
                                 <div class="add-emp-section">
@@ -82,7 +79,7 @@
                                 </div>
                                 
                                 <div>
-                                    <button class="button-submit add-emp-btn">Save this employee</button>
+                                    <button class="button-submit add-emp-btn">Update this employee</button>
                                 </div>
                             </form>
                             
