--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -61,6 +61,8 @@ p{
 
 button{
     border: none;
+    color:#ffff;
+    border-radius: 3px;
 }
 table{
     border-collapse:collapse;
@@ -90,20 +92,38 @@ input, select, button{
 
 /*  */
 
+.button{
+    background-color: #576574;
+}
+.button:hover{
+    background-color: #222f3e;
+}
 
 .button-submit{
      background-color: #3498db;
-     color:#ffff;
-     border-radius: 3px;
 }
 
 .button-submit:hover{
     background-color: #2980b9;
 }
 
+.button-edit{
+    background-color: #1dd1a1;
+}
+.button-edit:hover{
+    background-color: #10ac84;
+}
+
+.button-delete{
+    background-color: #ff6b6b;
+}
+.button-delete:hover{
+    background-color: #ee5253;
+}
+
 
 .error{
-    color: #e74c3c;
+    color: #ee5253;
 }
 
 .box-shadow{
@@ -405,8 +425,11 @@ input, select, button{
 }
 
 /* ADD EMPLOYEE */
-.employee-container .title{
+.employee-container .head{
     font-size: 1.75rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     border-bottom: 1px solid #2f3542;
     border-radius: 0;
     padding-bottom: .25em;
@@ -418,17 +441,19 @@ input, select, button{
 .employee-container .addemp-form form .add-emp-section{
     display: flex;
     flex-wrap: wrap;
-    padding: 0 1em 0em 1em;
+    padding: 0 1em 1em 1em;
     gap: 0 20px;
 }
 .employee-container .addemp-form form .add-emp-section div{
     display: flex;
     flex-direction: column;
 }
+.employee-container .addemp-form form .add-emp-section div div{
+    height: 80px;
+}
 .employee-container .addemp-form form .add-emp-section div label.error{
     font-size: .75rem;
     font-weight: 300;
-    margin-bottom: 10px;
     color: #e74c3c
 }
 
@@ -441,6 +466,8 @@ input, select, button{
 .employee-container .addemp-form form input[type='text']{
     padding: .55em .75em;
     width: 300px;
+    border: #636e72 1px solid;
+    border-radius: 3px;
 }
 .employee-container .addemp-form form .add-emp-btn{
     padding: .5em 5em;
