--- a/views/Employees.ejs
+++ b/views/Employees.ejs
@@ -40,8 +40,7 @@
                                         <td><%=user.contact%></td>
                                         <td><%=user.position%></td>
                                         <td>
-                                            <button class="button" data-id='<%=user._id%>'>view</button>
-                                            <button class="button-edit">edit</button>
+                                            <button class="button" data-id='<%=user._id%>'>view details</button>
                                         </td>
                                     </tr>
                                 <%}); %>
