--update: net amount api started

--- a/views/Payroll.ejs
+++ b/views/Payroll.ejs
@@ -40,7 +40,7 @@
                             <td><%=user.gross_salary%></td>
                             <td><%=user.no_of_absents%></td>
                             <td><%=user.no_of_undertime%></td>
-                            <td><%=user.gross_salary%></td>
+                            <td><%=user.net_amount_due%></td>
                             <td>0</td>
                             <td>0</td>
                         </tr>
