--- a/views/partials/Aside.ejs
+++ b/views/partials/Aside.ejs
@@ -35,7 +35,17 @@
                     <label for="">Records</label>
                 </a>
             </div>
-        </div><div class="container-aside-list">
+        </div>
+        <div class="container-aside-list">
+            <label for="payroll">Holiday and Travel Order</label>
+            <div class="container-aside-list-dropdown">
+                <a href="/admin/event">
+                    <i class="fa-solid fa-calendar-check"></i>
+                    <label for="">Events</label>
+                </a>
+            </div>
+        </div>
+        <div class="container-aside-list">
             <label for="payroll">Settings</label>
             <div class="container-aside-list-dropdown">
                 <a href="#">
