revert for testing, add auto refresh at certain time at time monitoring

--- a/views/TimeMonitoring.ejs
+++ b/views/TimeMonitoring.ejs
@@ -19,7 +19,7 @@
                         <form>
                             <div class="attendance-component box-shadow components">
                                 <select name="time_type" id="time_type">
-                                    <option value="timein">Time In</option>
+                                    <option value="timein"">Time In</option>
                                     <option value="timeout">Time Out</option>
                                 </select>
                                 <label for="">Scan your id here:</label>
