--- a/views/partials/Aside.ejs
+++ b/views/partials/Aside.ejs
@@ -10,7 +10,7 @@
             </div>
         </div>
         <div class="container-aside-list">
-            <label for="employee">Employee Management</label>
+            <label for="employee">Employee</label>
             <div class="container-aside-list-dropdown  ">
                 <a href="/admin/employees">
                     <i class="fa-solid fa-user"></i>
@@ -19,7 +19,7 @@
             </div>
         </div>
         <div class="container-aside-list">
-            <label for="employee">Payroll Management</label>
+            <label for="employee">Payroll</label>
             <div class="container-aside-list-dropdown ">
                 <a href="/admin/payroll">
                     <i class="fa-solid fa-receipt"></i>
@@ -28,7 +28,7 @@
             </div>
         </div>
         <div class="container-aside-list">
-            <label for="payroll">Attendance Management</label>
+            <label for="payroll">Attendance</label>
             <div class="container-aside-list-dropdown">
                 <a href="/admin/records">
                     <i class="fa-solid fa-calendar-check"></i>
@@ -39,9 +39,9 @@
         <div class="container-aside-list">
             <label for="payroll">Holiday and Travel Order</label>
             <div class="container-aside-list-dropdown">
-                <a href="/admin/event">
+                <a href="/admin/holidays">
                     <i class="fa-solid fa-calendar-check"></i>
-                    <label for="">Events</label>
+                    <label for="">Holiday</label>
                 </a>
             </div>
         </div>
